Bug 1104357 - Ensure MediaDecoderReader is shutdown on all exit paths from MediaDecodeTask::Decode.  r=cpearce

Also adds an assertion to MediaDecoderReader::Shutdown to ensure it is called from the appropriate thread.