dom/media/MediaDecoderReader.h
@@ -56,7 +56,8 @@ public:
 
   // Destroys the decoding state. The reader cannot be made usable again.
   // This is different from ReleaseMediaResources() as it is irreversable,
-  // whereas ReleaseMediaResources() is.
+  // whereas ReleaseMediaResources() is.  Must be called on the decode
+  // thread.
   virtual void Shutdown();
 
   virtual void SetCallback(RequestSampleCallback* aDecodedSampleCallback);
