dom/media/webaudio/MediaBufferDecoder.cpp
@@ -142,6 +142,7 @@ private:
     MOZ_ASSERT(NS_IsMainThread());
     // MediaDecoderReader expects that BufferDecoder is alive.
     // Destruct MediaDecoderReader first.
+    mDecoderReader->BreakCycles();
     mDecoderReader = nullptr;
     mBufferDecoder = nullptr;
     JS_free(nullptr, mBuffer);
@@ -248,11 +249,13 @@ MediaDecodeTask::Decode()
   nsAutoPtr<MetadataTags> tags;
   nsresult rv = mDecoderReader->ReadMetadata(&mediaInfo, getter_Transfers(tags));
   if (NS_FAILED(rv)) {
+    mDecoderReader->Shutdown();
     ReportFailureOnMainThread(WebAudioDecodeJob::InvalidContent);
     return;
   }
 
   if (!mDecoderReader->HasAudio()) {
+    mDecoderReader->Shutdown();
     ReportFailureOnMainThread(WebAudioDecodeJob::NoAudio);
     return;
   }
@@ -264,6 +267,7 @@ MediaDecodeTask::Decode()
     mDecoderReader->RequestAudioData();
     nsRefPtr<AudioData> audio;
     if (NS_FAILED(barrier->Await(audio))) {
+      mDecoderReader->Shutdown();
       ReportFailureOnMainThread(WebAudioDecodeJob::InvalidContent);
       return;
     }
@@ -274,7 +278,6 @@ MediaDecodeTask::Decode()
     audioQueue.Push(audio);
   }
   mDecoderReader->Shutdown();
-  mDecoderReader->BreakCycles();
 
   uint32_t frameCount = audioQueue.FrameCount();
   uint32_t channelCount = mediaInfo.mAudio.mChannels;
